--- a/packages/angular-three/.eslintrc.json
+++ b/packages/angular-three/.eslintrc.json
@@ -6,22 +6,14 @@
             "files": ["*.ts"],
             "extends": ["plugin:@nrwl/nx/angular", "plugin:@angular-eslint/template/process-inline-templates"],
             "rules": {
-                "@angular-eslint/directive-selector": [
-                    "error",
-                    {
-                        "type": "attribute",
-                        "prefix": "angularThree",
-                        "style": "camelCase"
-                    }
-                ],
-                "@angular-eslint/component-selector": [
-                    "error",
-                    {
-                        "type": "element",
-                        "prefix": "angular-three",
-                        "style": "kebab-case"
-                    }
-                ]
+              "@angular-eslint/component-class-suffix": "off",
+              "@angular-eslint/directive-class-suffix": "off",
+              "@angular-eslint/no-inputs-metadata-property": "off",
+              "@angular-eslint/no-output-native": "off",
+              "@typescript-eslint/no-explicit-any": "off",
+              "@typescript-eslint/ban-types": "off",
+              "@typescript-eslint/ban-ts-comment": "off",
+              "@typescript-eslint/no-non-null-assertion": "off"
             }
         },
         {
