--- a/packages/three-generator/.eslintrc.json
+++ b/packages/three-generator/.eslintrc.json
@@ -4,7 +4,9 @@
     "overrides": [
         {
             "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
-            "rules": {}
+            "rules": {
+                "@typescript-eslint/no-explicit-any": "off"
+            }
         },
         {
             "files": ["*.ts", "*.tsx"],
