--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,14 +15,16 @@
         "skipDefaultLibCheck": true,
         "baseUrl": ".",
         "paths": {
-            "three-generator": ["packages/three-generator/src/index.ts"],
             "angular-three": ["packages/angular-three/src/index.ts"],
             "angular-three/attributes": ["packages/angular-three/attributes/src/index.ts"],
             "angular-three/audios": ["packages/angular-three/audios/src/index.ts"],
             "angular-three/cameras": ["packages/angular-three/cameras/src/index.ts"],
             "angular-three/geometries": ["packages/angular-three/geometries/src/index.ts"],
+            "angular-three/helpers": ["packages/angular-three/helpers/src/index.ts"],
+            "angular-three/lights": ["packages/angular-three/lights/src/index.ts"],
             "angular-three/materials": ["packages/angular-three/materials/src/index.ts"],
-            "angular-three/objects": ["packages/angular-three/objects/src/index.ts"]
+            "angular-three/objects": ["packages/angular-three/objects/src/index.ts"],
+            "three-generator": ["packages/three-generator/src/index.ts"]
         }
     },
     "exclude": ["node_modules", "tmp"]
