--- a/packages/angular-three/project.json
+++ b/packages/angular-three/project.json
@@ -50,7 +50,9 @@
                     "packages/angular-three/helpers/**/*.ts",
                     "packages/angular-three/helpers/**/*.html",
                     "packages/angular-three/lights/**/*.ts",
-                    "packages/angular-three/lights/**/*.html"
+                    "packages/angular-three/lights/**/*.html",
+                    "packages/angular-three/textures/**/*.ts",
+                    "packages/angular-three/textures/**/*.html"
                 ]
             }
         }
