--- a/packages/sandbox/.eslintrc.json
+++ b/packages/sandbox/.eslintrc.json
@@ -6,22 +6,13 @@
             "files": ["*.ts"],
             "extends": ["plugin:@nrwl/nx/angular", "plugin:@angular-eslint/template/process-inline-templates"],
             "rules": {
-                "@angular-eslint/directive-selector": [
-                    "error",
-                    {
-                        "type": "attribute",
-                        "prefix": "angularThree",
-                        "style": "camelCase"
-                    }
-                ],
-                "@angular-eslint/component-selector": [
-                    "error",
-                    {
-                        "type": "element",
-                        "prefix": "angular-three",
-                        "style": "kebab-case"
-                    }
-                ]
+              "@angular-eslint/directive-selector": "off",
+              "@angular-eslint/directive-class-suffix": "off",
+              "@angular-eslint/component-selector": "off",
+              "@angular-eslint/component-class-suffix": "off",
+              "@typescript-eslint/no-empty-function": "off",
+              "@typescript-eslint/ban-ts-comment": "off",
+              "@typescript-eslint/no-explicit-any": "off"
             }
         },
         {
