--- a/packages/angular-three/package.json
+++ b/packages/angular-three/package.json
@@ -3,9 +3,11 @@
     "version": "0.0.1",
     "peerDependencies": {
         "@angular/common": "^15.0.0",
-        "@angular/core": "^15.0.0"
+        "@angular/core": "^15.0.0",
+        "three": "0.146.0"
     },
     "dependencies": {
+        "@ngrx/component-store": "^15.0.0-beta.1",
         "tslib": "^2.3.0"
     },
     "generators": "./schematics/generators.json",
