--- a/packages/angular-drei/.eslintrc.json
+++ b/packages/angular-drei/.eslintrc.json
@@ -14,7 +14,8 @@
                 "@typescript-eslint/no-explicit-any": "off",
                 "@typescript-eslint/ban-types": "off",
                 "@typescript-eslint/ban-ts-comment": "off",
-                "@typescript-eslint/no-non-null-assertion": "off"
+                "@typescript-eslint/no-non-null-assertion": "off",
+                "@typescript-eslint/member-ordering": "off"
             }
         },
         {
