--- a/packages/angular-drei/package.json
+++ b/packages/angular-drei/package.json
@@ -6,6 +6,7 @@
         "@angular/core": "^15.0.0"
     },
     "dependencies": {
+        "three-stdlib": "^2.19.0",
         "tslib": "^2.3.0"
     }
 }
