--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,7 @@
         "baseUrl": ".",
         "paths": {
             "angular-drei": ["packages/angular-drei/src/index.ts"],
+            "angular-drei/controls": ["packages/angular-drei/controls/src/index.ts"],
             "angular-three": ["packages/angular-three/src/index.ts"],
             "angular-three/attributes": ["packages/angular-three/attributes/src/index.ts"],
             "angular-three/audios": ["packages/angular-three/audios/src/index.ts"],
