--- a/old-v7/packages/soba/project.json
+++ b/old-v7/packages/soba/project.json
@@ -1,5 +1,5 @@
 {
-  "name": "soba",
+  "name": "old-soba",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "library",
   "sourceRoot": "packages/soba/src",
