--- a/packages/soba/package.json
+++ b/packages/soba/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "angular-drei",
-    "version": "0.0.1",
+    "name": "soba",
+    "version": "7.0.0",
     "peerDependencies": {
         "@angular/common": "^15.0.0",
         "@angular/core": "^15.0.0"
