--- a/packages/soba/project.json
+++ b/packages/soba/project.json
@@ -1,22 +1,22 @@
 {
-    "name": "angular-drei",
+    "name": "soba",
     "$schema": "../../node_modules/nx/schemas/project-schema.json",
     "projectType": "library",
-    "sourceRoot": "packages/angular-drei/src",
+    "sourceRoot": "packages/soba/src",
     "prefix": "drei",
     "targets": {
         "build": {
             "executor": "@nrwl/angular:package",
             "outputs": ["{workspaceRoot}/dist/{projectRoot}"],
             "options": {
-                "project": "packages/angular-drei/ng-package.json"
+                "project": "packages/soba/ng-package.json"
             },
             "configurations": {
                 "production": {
-                    "tsConfig": "packages/angular-drei/tsconfig.lib.prod.json"
+                    "tsConfig": "packages/soba/tsconfig.lib.prod.json"
                 },
                 "development": {
-                    "tsConfig": "packages/angular-drei/tsconfig.lib.json"
+                    "tsConfig": "packages/soba/tsconfig.lib.json"
                 }
             },
             "defaultConfiguration": "production"
@@ -25,7 +25,7 @@
             "executor": "@nrwl/jest:jest",
             "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
             "options": {
-                "jestConfig": "packages/angular-drei/jest.config.ts",
+                "jestConfig": "packages/soba/jest.config.ts",
                 "passWithNoTests": true
             }
         },
@@ -33,10 +33,10 @@
             "executor": "@nrwl/linter:eslint",
             "options": {
                 "lintFilePatterns": [
-                    "packages/angular-drei/**/*.ts",
-                    "packages/angular-drei/**/*.html",
-                    "packages/angular-drei/controls/**/*.ts",
-                    "packages/angular-drei/controls/**/*.html"
+                    "packages/soba/**/*.ts",
+                    "packages/soba/**/*.html",
+                    "packages/soba/controls/**/*.ts",
+                    "packages/soba/controls/**/*.html"
                 ]
             }
         }
