--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -27,8 +27,8 @@
             "@angular-three/core/primitives": ["packages/core/primitives/src/index.ts"],
             "@angular-three/core/stats": ["packages/core/stats/src/index.ts"],
             "@angular-three/core/textures": ["packages/core/textures/src/index.ts"],
-            "angular-drei": ["packages/angular-drei/src/index.ts"],
-            "angular-drei/controls": ["packages/angular-drei/controls/src/index.ts"],
+            "@angular-three/soba": ["packages/soba/src/index.ts"],
+            "@angular-three/soba/controls": ["packages/soba/controls/src/index.ts"],
             "three-generator": ["packages/three-generator/src/index.ts"]
         }
     },
