--- a/package.json
+++ b/package.json
@@ -22,7 +22,13 @@
         "@nrwl/js": "15.2.1",
         "@nrwl/linter": "15.2.1",
         "@nrwl/nx-plugin": "15.2.1",
+        "@nrwl/storybook": "15.2.1",
         "@nrwl/workspace": "15.2.1",
+        "@storybook/addon-essentials": "~6.5.9",
+        "@storybook/angular": "~6.5.9",
+        "@storybook/builder-webpack5": "~6.5.9",
+        "@storybook/core-server": "~6.5.9",
+        "@storybook/manager-webpack5": "~6.5.9",
         "@swc-node/register": "^1.4.2",
         "@swc/cli": "~0.1.55",
         "@swc/core": "^1.2.173",
@@ -46,7 +52,8 @@
         "prettier": "^2.6.2",
         "ts-jest": "28.0.5",
         "ts-node": "10.9.1",
-        "typescript": "~4.8.2"
+        "typescript": "~4.8.2",
+        "webpack": "^5.64.0"
     },
     "dependencies": {
         "@angular/animations": "~15.0.0",
