--- a/packages/soba/tsconfig.lib.json
+++ b/packages/soba/tsconfig.lib.json
@@ -7,6 +7,13 @@
         "inlineSources": true,
         "types": []
     },
-    "exclude": ["src/test-setup.ts", "**/*.spec.ts", "jest.config.ts", "**/*.test.ts"],
+    "exclude": [
+        "src/test-setup.ts",
+        "**/*.spec.ts",
+        "jest.config.ts",
+        "**/*.test.ts",
+        "**/*.stories.ts",
+        "**/*.stories.js"
+    ],
     "include": ["**/*.ts"]
 }
