--- a/packages/soba/.eslintrc.json
+++ b/packages/soba/.eslintrc.json
@@ -6,16 +6,21 @@
             "files": ["*.ts"],
             "extends": ["plugin:@nrwl/nx/angular", "plugin:@angular-eslint/template/process-inline-templates"],
             "rules": {
+                "@nrwl/nx/enforce-module-boundaries": "off",
                 "@angular-eslint/component-class-suffix": "off",
                 "@angular-eslint/directive-class-suffix": "off",
                 "@angular-eslint/no-inputs-metadata-property": "off",
                 "@angular-eslint/no-outputs-metadata-property": "off",
                 "@angular-eslint/no-output-native": "off",
+                "@angular-eslint/component-selector": "off",
+                "@angular-eslint/no-host-metadata-property": "off",
+                "@angular-eslint/directive-selector": "off",
                 "@typescript-eslint/no-explicit-any": "off",
                 "@typescript-eslint/ban-types": "off",
                 "@typescript-eslint/ban-ts-comment": "off",
                 "@typescript-eslint/no-non-null-assertion": "off",
-                "@typescript-eslint/member-ordering": "off"
+                "@typescript-eslint/member-ordering": "off",
+                "@typescript-eslint/no-empty-function": "off"
             }
         },
         {
