--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
         "rxjs": "~7.5.0",
         "three": "0.146.0",
         "three-stdlib": "2.19.0",
+        "troika-three-text": "^0.46.4",
         "tslib": "^2.3.0",
         "zone.js": "~0.11.4"
     }
