--- a/packages/soba/package.json
+++ b/packages/soba/package.json
@@ -7,6 +7,7 @@
     },
     "dependencies": {
         "three-stdlib": "^2.19.0",
+        "troika-three-text": "~0.46.4",
         "tslib": "^2.3.0"
     }
 }
