--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -28,8 +28,10 @@
             "@angular-three/core/stats": ["packages/core/stats/src/index.ts"],
             "@angular-three/core/textures": ["packages/core/textures/src/index.ts"],
             "@angular-three/soba": ["packages/soba/src/index.ts"],
-            "@angular-three/soba/controls": ["packages/soba/controls/src/index.ts"],
             "@angular-three/soba/abstractions": ["packages/soba/abstractions/src/index.ts"],
+            "@angular-three/soba/cameras": ["packages/soba/cameras/src/index.ts"],
+            "@angular-three/soba/controls": ["packages/soba/controls/src/index.ts"],
+            "@angular-three/soba/misc": ["packages/soba/misc/src/index.ts"],
             "three-generator": ["packages/three-generator/src/index.ts"]
         }
     },
