--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "postcss-preset-env": "~7.5.0",
         "postcss-url": "~10.1.3",
         "prettier": "^2.6.2",
+        "prettier-plugin-organize-imports": "3.2.1",
         "ts-jest": "28.0.5",
         "ts-node": "10.9.1",
         "typescript": "~4.8.2",
