--- a/packages/soba/project.json
+++ b/packages/soba/project.json
@@ -42,7 +42,9 @@
                     "packages/soba/cameras/**/*.ts",
                     "packages/soba/cameras/**/*.html",
                     "packages/soba/misc/**/*.ts",
-                    "packages/soba/misc/**/*.html"
+                    "packages/soba/misc/**/*.html",
+                    "packages/soba/loaders/**/*.ts",
+                    "packages/soba/loaders/**/*.html"
                 ]
             }
         },
