--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -31,6 +31,7 @@
             "@angular-three/soba/abstractions": ["packages/soba/abstractions/src/index.ts"],
             "@angular-three/soba/cameras": ["packages/soba/cameras/src/index.ts"],
             "@angular-three/soba/controls": ["packages/soba/controls/src/index.ts"],
+            "@angular-three/soba/loaders": ["packages/soba/loaders/src/index.ts"],
             "@angular-three/soba/misc": ["packages/soba/misc/src/index.ts"],
             "three-generator": ["packages/three-generator/src/index.ts"]
         }
