--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     },
     "private": true,
     "devDependencies": {
-        "@angular-devkit/build-angular": "~15.0.0",
-        "@angular-eslint/eslint-plugin": "~14.0.4",
-        "@angular-eslint/eslint-plugin-template": "~14.0.4",
-        "@angular-eslint/template-parser": "~14.0.4",
-        "@angular/cli": "~15.0.0",
-        "@angular/compiler-cli": "~15.0.0",
-        "@angular/language-service": "~15.0.0",
+        "@angular-devkit/build-angular": "~15.0.1",
+        "@angular-eslint/eslint-plugin": "~15.1.0",
+        "@angular-eslint/eslint-plugin-template": "~15.1.0",
+        "@angular-eslint/template-parser": "~15.1.0",
+        "@angular/cli": "~15.0.1",
+        "@angular/compiler-cli": "~15.0.1",
+        "@angular/language-service": "~15.0.1",
         "@nrwl/angular": "15.2.3",
         "@nrwl/cli": "15.2.3",
         "@nrwl/devkit": "15.2.3",
@@ -24,54 +24,54 @@
         "@nrwl/nx-plugin": "15.2.3",
         "@nrwl/storybook": "15.2.3",
         "@nrwl/workspace": "15.2.3",
-        "@storybook/addon-essentials": "~6.5.9",
-        "@storybook/angular": "~6.5.9",
-        "@storybook/builder-webpack5": "~6.5.9",
-        "@storybook/core-server": "~6.5.9",
-        "@storybook/manager-webpack5": "~6.5.9",
-        "@swc-node/register": "^1.4.2",
-        "@swc/cli": "~0.1.55",
-        "@swc/core": "^1.2.173",
+        "@storybook/addon-essentials": "~6.5.13",
+        "@storybook/angular": "~6.5.13",
+        "@storybook/builder-webpack5": "~6.5.13",
+        "@storybook/core-server": "~6.5.13",
+        "@storybook/manager-webpack5": "~6.5.13",
+        "@swc-node/register": "^1.5.4",
+        "@swc/cli": "~0.1.57",
+        "@swc/core": "^1.3.20",
         "@types/jest": "28.1.1",
-        "@types/node": "16.11.7",
+        "@types/node": "18.11.9",
         "@types/three": "0.146.0",
-        "@typescript-eslint/eslint-plugin": "^5.36.1",
-        "@typescript-eslint/parser": "^5.36.1",
-        "eslint": "~8.15.0",
-        "eslint-config-prettier": "8.1.0",
+        "@typescript-eslint/eslint-plugin": "^5.45.0",
+        "@typescript-eslint/parser": "^5.45.0",
+        "eslint": "~8.28.0",
+        "eslint-config-prettier": "8.5.0",
         "jest": "28.1.1",
         "jest-environment-jsdom": "28.1.1",
         "jest-preset-angular": "~12.2.2",
         "jsonc-eslint-parser": "^2.1.0",
-        "ng-packagr": "~15.0.0",
+        "ng-packagr": "~15.0.1",
         "nx": "15.2.3",
-        "postcss": "^8.4.5",
-        "postcss-import": "~14.1.0",
-        "postcss-preset-env": "~7.5.0",
+        "postcss": "^8.4.19",
+        "postcss-import": "~15.0.0",
+        "postcss-preset-env": "~7.8.3",
         "postcss-url": "~10.1.3",
-        "prettier": "^2.6.2",
+        "prettier": "^2.8.0",
         "prettier-plugin-organize-imports": "3.2.1",
         "ts-jest": "28.0.5",
         "ts-node": "10.9.1",
         "typescript": "~4.8.2",
-        "webpack": "^5.64.0"
+        "webpack": "^5.75.0"
     },
     "dependencies": {
-        "@angular/animations": "~15.0.0",
-        "@angular/common": "~15.0.0",
-        "@angular/compiler": "~15.0.0",
-        "@angular/core": "~15.0.0",
-        "@angular/forms": "~15.0.0",
-        "@angular/platform-browser": "~15.0.0",
-        "@angular/platform-browser-dynamic": "~15.0.0",
-        "@angular/router": "~15.0.0",
-        "@ngrx/component-store": "^15.0.0-beta.1",
-        "@swc/helpers": "~0.4.11",
-        "rxjs": "~7.5.0",
+        "@angular/animations": "~15.0.1",
+        "@angular/common": "~15.0.1",
+        "@angular/compiler": "~15.0.1",
+        "@angular/core": "~15.0.1",
+        "@angular/forms": "~15.0.1",
+        "@angular/platform-browser": "~15.0.1",
+        "@angular/platform-browser-dynamic": "~15.0.1",
+        "@angular/router": "~15.0.1",
+        "@ngrx/component-store": "^15.0.0",
+        "@swc/helpers": "~0.4.14",
+        "rxjs": "~7.5.7",
         "three": "0.146.0",
         "three-stdlib": "2.19.0",
         "troika-three-text": "^0.46.4",
-        "tslib": "^2.3.0",
-        "zone.js": "~0.11.4"
+        "tslib": "^2.4.1",
+        "zone.js": "~0.12.0"
     }
 }
