--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,7 +7,7 @@
         "three": "0.146.0"
     },
     "dependencies": {
-        "@ngrx/component-store": "^15.0.0-beta.1",
+        "@ngrx/component-store": "^15.0.0",
         "@nrwl/devkit": "^15.0.0",
         "tslib": "^2.3.0"
     },
