--- a/packages/soba/project.json
+++ b/packages/soba/project.json
@@ -44,7 +44,9 @@
                     "packages/soba/misc/**/*.ts",
                     "packages/soba/misc/**/*.html",
                     "packages/soba/loaders/**/*.ts",
-                    "packages/soba/loaders/**/*.html"
+                    "packages/soba/loaders/**/*.html",
+                    "packages/soba/performances/**/*.ts",
+                    "packages/soba/performances/**/*.html"
                 ]
             }
         },
