--- a/packages/soba/project.json
+++ b/packages/soba/project.json
@@ -46,7 +46,9 @@
                     "packages/soba/loaders/**/*.ts",
                     "packages/soba/loaders/**/*.html",
                     "packages/soba/performances/**/*.ts",
-                    "packages/soba/performances/**/*.html"
+                    "packages/soba/performances/**/*.html",
+                    "packages/soba/staging/**/*.ts",
+                    "packages/soba/staging/**/*.html"
                 ]
             }
         },
