--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,9 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@angular-three/core": ["packages/core/src/index.ts"]
+      "@angular-three/core": ["packages/core/src/index.ts"],
+      "@angular-three/soba": ["packages/soba/src/index.ts"],
+      "@angular-three/soba/loaders": ["packages/soba/loaders/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
