testing out physics

--- a/package.json
+++ b/package.json
@@ -52,6 +52,9 @@
     "@angular/platform-browser": "~15.0.4",
     "@angular/platform-browser-dynamic": "~15.0.4",
     "@angular/router": "~15.0.4",
+    "@pmndrs/cannon-worker-api": "^2.3.0",
+    "cannon-es": "^0.20.0",
+    "cannon-es-debugger": "^1.0.0",
     "rxjs": "~7.6.0",
     "three": "^0.147.0",
     "three-stdlib": "^2.20.4",
@@ -60,4 +63,3 @@
     "zustand": "^4.1.5"
   }
 }
-
