--- a/packages/cannon/package.json
+++ b/packages/cannon/package.json
@@ -6,6 +6,9 @@
     "@angular/core": "^15.0.0"
   },
   "dependencies": {
+    "@pmndrs/cannon-worker-api": "^2.3.0",
+    "cannon-es": "^0.20.0",
+    "cannon-es-debugger": "^1.0.0",
     "tslib": "^2.3.0"
   }
 }
