--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,8 @@
     "baseUrl": ".",
     "paths": {
       "@angular-three/cannon": ["packages/cannon/src/index.ts"],
+      "@angular-three/cannon/debug": ["packages/cannon/debug/src/index.ts"],
+      "@angular-three/cannon/services": ["packages/cannon/services/src/index.ts"],
       "@angular-three/core": ["packages/core/src/index.ts"],
       "@angular-three/soba": ["packages/soba/src/index.ts"],
       "@angular-three/soba/loaders": ["packages/soba/loaders/src/index.ts"]
