--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
     "@angular/platform-browser": "~15.0.4",
     "@angular/platform-browser-dynamic": "~15.0.4",
     "@angular/router": "~15.0.4",
+    "@ngrx/component-store": "^15.0.0",
     "@pmndrs/cannon-worker-api": "^2.3.0",
+    "@rx-angular/state": "^1.7.0",
     "cannon-es": "^0.20.0",
     "cannon-es-debugger": "^1.0.0",
     "rxjs": "~7.6.0",
