better renderer I guess

--- a/package.json
+++ b/package.json
@@ -16,23 +16,23 @@
     "@angular/cli": "~15.0.4",
     "@angular/compiler-cli": "~15.0.4",
     "@angular/language-service": "~15.0.4",
-    "@nrwl/angular": "15.3.3",
-    "@nrwl/eslint-plugin-nx": "15.3.3",
-    "@nrwl/jest": "15.3.3",
-    "@nrwl/linter": "15.3.3",
-    "@nrwl/workspace": "15.3.3",
+    "@nrwl/angular": "15.4.0",
+    "@nrwl/eslint-plugin-nx": "15.4.0",
+    "@nrwl/jest": "15.4.0",
+    "@nrwl/linter": "15.4.0",
+    "@nrwl/workspace": "15.4.0",
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
     "@types/three": "^0.146.0",
-    "@typescript-eslint/eslint-plugin": "^5.46.1",
-    "@typescript-eslint/parser": "^5.46.1",
-    "eslint": "~8.29.0",
+    "@typescript-eslint/eslint-plugin": "^5.47.0",
+    "@typescript-eslint/parser": "^5.47.0",
+    "eslint": "~8.30.0",
     "eslint-config-prettier": "8.5.0",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "jest-preset-angular": "~12.2.3",
-    "ng-packagr": "~15.0.0",
-    "nx": "15.3.3",
+    "ng-packagr": "~15.0.3",
+    "nx": "15.4.0",
     "postcss": "^8.4.20",
     "postcss-import": "~15.1.0",
     "postcss-preset-env": "~7.8.3",
@@ -54,14 +54,13 @@
     "@angular/router": "~15.0.4",
     "@ngrx/component-store": "^15.0.0",
     "@pmndrs/cannon-worker-api": "^2.3.0",
-    "@rx-angular/state": "^1.7.0",
     "cannon-es": "^0.20.0",
     "cannon-es-debugger": "^1.0.0",
-    "rxjs": "~7.6.0",
+    "rxjs": "~7.8.0",
     "three": "^0.147.0",
-    "three-stdlib": "^2.20.4",
+    "three-stdlib": "^2.20.5",
     "tslib": "^2.4.1",
-    "zone.js": "~0.12.0",
-    "zustand": "^4.1.5"
+    "zone.js": "~0.12.0"
   }
 }
+
