--- a/packages/soba/tsconfig.json
+++ b/packages/soba/tsconfig.json
@@ -20,7 +20,7 @@
     "strict": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
-    "noImplicitReturns": true,
+    "noImplicitReturns": false,
     "noFallthroughCasesInSwitch": true
   },
 
