--- a/packages/soba/project.json
+++ b/packages/soba/project.json
@@ -37,7 +37,13 @@
           "packages/soba/**/*.ts",
           "packages/soba/**/*.html",
           "packages/soba/loaders/**/*.ts",
-          "packages/soba/loaders/**/*.html"
+          "packages/soba/loaders/**/*.html",
+          "packages/soba/cameras/**/*.ts",
+          "packages/soba/cameras/**/*.html",
+          "packages/soba/misc/**/*.ts",
+          "packages/soba/misc/**/*.html",
+          "packages/soba/controls/**/*.ts",
+          "packages/soba/controls/**/*.html"
         ]
       }
     }
