--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,7 +20,10 @@
       "@angular-three/cannon/services": ["packages/cannon/services/src/index.ts"],
       "@angular-three/core": ["packages/core/src/index.ts"],
       "@angular-three/soba": ["packages/soba/src/index.ts"],
-      "@angular-three/soba/loaders": ["packages/soba/loaders/src/index.ts"]
+      "@angular-three/soba/cameras": ["packages/soba/cameras/src/index.ts"],
+      "@angular-three/soba/controls": ["packages/soba/controls/src/index.ts"],
+      "@angular-three/soba/loaders": ["packages/soba/loaders/src/index.ts"],
+      "@angular-three/soba/misc": ["packages/soba/misc/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
