move core to core-two

--- a/packages/core-two/project.json
+++ b/packages/core-two/project.json
@@ -1,22 +1,22 @@
 {
-  "name": "core",
+  "name": "core-two",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "library",
-  "sourceRoot": "packages/core/src",
+  "sourceRoot": "packages/core-two/src",
   "prefix": "angular-three",
   "targets": {
     "build": {
       "executor": "@nrwl/angular:package",
       "outputs": ["{workspaceRoot}/dist/{projectRoot}"],
       "options": {
-        "project": "packages/core/ng-package.json"
+        "project": "packages/core-two/ng-package.json"
       },
       "configurations": {
         "production": {
-          "tsConfig": "packages/core/tsconfig.lib.prod.json"
+          "tsConfig": "packages/core-two/tsconfig.lib.prod.json"
         },
         "development": {
-          "tsConfig": "packages/core/tsconfig.lib.json"
+          "tsConfig": "packages/core-two/tsconfig.lib.json"
         }
       },
       "defaultConfiguration": "production"
@@ -25,7 +25,7 @@
       "executor": "@nrwl/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "packages/core/jest.config.ts",
+        "jestConfig": "packages/core-two/jest.config.ts",
         "passWithNoTests": true
       }
     },
@@ -33,7 +33,7 @@
       "executor": "@nrwl/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["packages/core/**/*.ts", "packages/core/**/*.html"]
+        "lintFilePatterns": ["packages/core-two/**/*.ts", "packages/core-two/**/*.html"]
       }
     }
   },
