--- a/packages/core-two/package.json
+++ b/packages/core-two/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@angular-three/core",
+  "name": "@angular-three/core-two",
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^15.0.0",
