--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@angular/router": "~15.0.4",
     "@ngrx/component-store": "^15.1.0",
     "@pmndrs/cannon-worker-api": "^2.3.0",
+    "@rx-angular/state": "^1.7.0",
     "cannon-es": "^0.20.0",
     "cannon-es-debugger": "^1.0.0",
     "rxjs": "~7.8.0",
