--- a/packages/soba-two/package.json
+++ b/packages/soba-two/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@angular-three/soba",
+  "name": "@angular-three/soba-two",
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^15.0.0",
