--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,7 +20,7 @@
       "@angular-three/cannon/services": ["packages/cannon/services/src/index.ts"],
       "@angular-three/core": ["packages/core/src/index.ts"],
       "@angular-three/core-two": ["packages/core-two/src/index.ts"],
-      "@angular-three/soba": ["packages/soba/src/index.ts"],
+      "@angular-three/soba-two": ["packages/soba-two/src/index.ts"],
       "@angular-three/soba/cameras": ["packages/soba/cameras/src/index.ts"],
       "@angular-three/soba/controls": ["packages/soba/controls/src/index.ts"],
       "@angular-three/soba/loaders": ["packages/soba/loaders/src/index.ts"],
