--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,17 +19,11 @@
       "@angular-three/cannon/debug": ["packages/cannon/debug/src/index.ts"],
       "@angular-three/cannon/services": ["packages/cannon/services/src/index.ts"],
       "@angular-three/core": ["packages/core/src/index.ts"],
-      "@angular-three/core-two": ["packages/core-two/src/index.ts"],
       "@angular-three/soba": ["packages/soba/src/index.ts"],
       "@angular-three/soba/cameras": ["packages/soba/cameras/src/index.ts"],
       "@angular-three/soba/controls": ["packages/soba/controls/src/index.ts"],
       "@angular-three/soba/loaders": ["packages/soba/loaders/src/index.ts"],
-      "@angular-three/soba/misc": ["packages/soba/misc/src/index.ts"],
-      "@angular-three/soba-two": ["packages/soba-two/src/index.ts"],
-      "@angular-three/soba-two/cameras": ["packages/soba-two/cameras/src/index.ts"],
-      "@angular-three/soba-two/controls": ["packages/soba-two/controls/src/index.ts"],
-      "@angular-three/soba-two/loaders": ["packages/soba-two/loaders/src/index.ts"],
-      "@angular-three/soba-two/misc": ["packages/soba-two/misc/src/index.ts"]
+      "@angular-three/soba/misc": ["packages/soba/misc/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
