--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -23,7 +23,8 @@
       "@angular-three/soba/cameras": ["packages/soba/cameras/src/index.ts"],
       "@angular-three/soba/controls": ["packages/soba/controls/src/index.ts"],
       "@angular-three/soba/loaders": ["packages/soba/loaders/src/index.ts"],
-      "@angular-three/soba/misc": ["packages/soba/misc/src/index.ts"]
+      "@angular-three/soba/misc": ["packages/soba/misc/src/index.ts"],
+      "@angular-three/soba/performance": ["packages/soba/performance/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
