--- a/package.json
+++ b/package.json
@@ -20,7 +20,13 @@
     "@nrwl/eslint-plugin-nx": "15.4.2",
     "@nrwl/jest": "15.4.2",
     "@nrwl/linter": "15.4.2",
+    "@nrwl/storybook": "15.4.2",
     "@nrwl/workspace": "15.4.2",
+    "@storybook/addon-essentials": "~6.5.9",
+    "@storybook/angular": "~6.5.9",
+    "@storybook/builder-webpack5": "~6.5.9",
+    "@storybook/core-server": "~6.5.9",
+    "@storybook/manager-webpack5": "~6.5.9",
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
     "@types/three": "^0.146.0",
@@ -28,6 +34,7 @@
     "@typescript-eslint/parser": "^5.47.1",
     "eslint": "~8.30.0",
     "eslint-config-prettier": "8.5.0",
+    "html-webpack-plugin": "^5.5.0",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "jest-preset-angular": "~12.2.3",
@@ -41,7 +48,8 @@
     "prettier-plugin-organize-imports": "^3.2.1",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
-    "typescript": "~4.8.2"
+    "typescript": "~4.8.2",
+    "webpack": "^5.64.0"
   },
   "dependencies": {
     "@angular/animations": "~15.0.4",
@@ -64,4 +72,3 @@
     "zone.js": "~0.12.0"
   }
 }
-
