--- a/packages/soba/tsconfig.json
+++ b/packages/soba/tsconfig.json
@@ -11,6 +11,9 @@
     },
     {
       "path": "./tsconfig.lib.prod.json"
+    },
+    {
+      "path": "./.storybook/tsconfig.json"
     }
   ],
   "compilerOptions": {
