--- a/packages/soba/project.json
+++ b/packages/soba/project.json
@@ -47,7 +47,9 @@
           "packages/soba/performance/**/*.ts",
           "packages/soba/performance/**/*.html",
           "packages/soba/staging/**/*.ts",
-          "packages/soba/staging/**/*.html"
+          "packages/soba/staging/**/*.html",
+          "packages/soba/abstractions/**/*.ts",
+          "packages/soba/abstractions/**/*.html"
         ]
       }
     },
