--- a/package.json
+++ b/package.json
@@ -16,17 +16,17 @@
     "@angular/cli": "~15.0.4",
     "@angular/compiler-cli": "~15.0.4",
     "@angular/language-service": "~15.0.4",
-    "@nrwl/angular": "15.4.2",
-    "@nrwl/eslint-plugin-nx": "15.4.2",
-    "@nrwl/jest": "15.4.2",
-    "@nrwl/linter": "15.4.2",
-    "@nrwl/storybook": "15.4.2",
-    "@nrwl/workspace": "15.4.2",
-    "@storybook/addon-essentials": "~6.5.9",
-    "@storybook/angular": "~6.5.9",
-    "@storybook/builder-webpack5": "~6.5.9",
-    "@storybook/core-server": "~6.5.9",
-    "@storybook/manager-webpack5": "~6.5.9",
+    "@nrwl/angular": "15.4.4",
+    "@nrwl/eslint-plugin-nx": "15.4.4",
+    "@nrwl/jest": "15.4.4",
+    "@nrwl/linter": "15.4.4",
+    "@nrwl/storybook": "15.4.4",
+    "@nrwl/workspace": "15.4.4",
+    "@storybook/addon-essentials": "6.5.15",
+    "@storybook/angular": "6.5.15",
+    "@storybook/builder-webpack5": "6.5.15",
+    "@storybook/core-server": "6.5.15",
+    "@storybook/manager-webpack5": "6.5.15",
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
     "@types/three": "^0.146.0",
@@ -39,7 +39,7 @@
     "jest-environment-jsdom": "28.1.1",
     "jest-preset-angular": "~12.2.3",
     "ng-packagr": "~15.0.3",
-    "nx": "15.4.2",
+    "nx": "15.4.4",
     "postcss": "^8.4.20",
     "postcss-import": "~15.1.0",
     "postcss-preset-env": "~7.8.3",
@@ -73,3 +73,4 @@
     "zone.js": "~0.12.0"
   }
 }
+
