--- a/packages/soba/package.json
+++ b/packages/soba/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^15.0.0",
-    "@angular/core": "^15.0.0"
+    "@angular/core": "^15.0.0",
+    "three-stdlib": "^2.21.1"
   },
   "dependencies": {
     "tslib": "^2.3.0",
-    "three-stdlib": "^2.21.1",
     "troika-three-text": "^0.47.1"
   }
 }
