--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@rx-angular/state": "^1.7.0",
     "cannon-es": "^0.20.0",
     "cannon-es-debugger": "^1.0.0",
+    "postprocessing": "^6.29.3",
     "rxjs": "~7.8.0",
     "three": "^0.148.0",
     "three-stdlib": "^2.21.5",
