--- a/packages/postprocessing/.eslintrc.json
+++ b/packages/postprocessing/.eslintrc.json
@@ -5,22 +5,21 @@
     {
       "files": ["*.ts"],
       "rules": {
-        "@angular-eslint/directive-selector": [
-          "error",
-          {
-            "type": "attribute",
-            "prefix": "angularThree",
-            "style": "camelCase"
-          }
-        ],
-        "@angular-eslint/component-selector": [
-          "error",
-          {
-            "type": "element",
-            "prefix": "angular-three",
-            "style": "kebab-case"
-          }
-        ]
+        "@nrwl/nx/enforce-module-boundaries": "off",
+        "@angular-eslint/component-class-suffix": "off",
+        "@angular-eslint/directive-class-suffix": "off",
+        "@angular-eslint/no-inputs-metadata-property": "off",
+        "@angular-eslint/no-outputs-metadata-property": "off",
+        "@angular-eslint/no-output-native": "off",
+        "@angular-eslint/component-selector": "off",
+        "@angular-eslint/no-host-metadata-property": "off",
+        "@angular-eslint/directive-selector": "off",
+        "@typescript-eslint/no-explicit-any": "off",
+        "@typescript-eslint/ban-types": "off",
+        "@typescript-eslint/ban-ts-comment": "off",
+        "@typescript-eslint/no-non-null-assertion": "off",
+        "@typescript-eslint/member-ordering": "off",
+        "@typescript-eslint/no-empty-function": "off"
       },
       "extends": [
         "plugin:@nrwl/nx/angular",
