--- a/package.json
+++ b/package.json
@@ -9,19 +9,19 @@
   },
   "private": true,
   "devDependencies": {
-    "@angular-devkit/build-angular": "~15.1.0",
+    "@angular-devkit/build-angular": "15.1.1",
     "@angular-eslint/eslint-plugin": "~15.1.0",
     "@angular-eslint/eslint-plugin-template": "~15.1.0",
     "@angular-eslint/template-parser": "~15.1.0",
-    "@angular/cli": "~15.1.0",
+    "@angular/cli": "~15.1.1",
     "@angular/compiler-cli": "~15.1.0",
     "@angular/language-service": "~15.1.0",
-    "@nrwl/angular": "15.4.5",
-    "@nrwl/eslint-plugin-nx": "15.4.5",
-    "@nrwl/jest": "15.4.5",
-    "@nrwl/linter": "15.4.5",
-    "@nrwl/storybook": "15.4.5",
-    "@nrwl/workspace": "15.4.5",
+    "@nrwl/angular": "15.5.1",
+    "@nrwl/eslint-plugin-nx": "15.5.1",
+    "@nrwl/jest": "15.5.1",
+    "@nrwl/linter": "15.5.1",
+    "@nrwl/storybook": "15.5.1",
+    "@nrwl/workspace": "15.5.1",
     "@storybook/addon-essentials": "6.5.15",
     "@storybook/angular": "6.5.15",
     "@storybook/builder-webpack5": "6.5.15",
@@ -38,8 +38,8 @@
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "jest-preset-angular": "~12.2.3",
-    "ng-packagr": "~15.1.1",
-    "nx": "15.4.5",
+    "ng-packagr": "15.1.1",
+    "nx": "15.5.1",
     "postcss": "^8.4.21",
     "postcss-import": "~15.1.0",
     "postcss-preset-env": "~7.8.3",
@@ -55,7 +55,7 @@
     "@angular/animations": "~15.1.0",
     "@angular/common": "~15.1.0",
     "@angular/compiler": "~15.1.0",
-    "@angular/core": "~15.1.0",
+    "@angular/core": "15.1.0",
     "@angular/forms": "~15.1.0",
     "@angular/platform-browser": "~15.1.0",
     "@angular/platform-browser-dynamic": "~15.1.0",
@@ -76,4 +76,3 @@
     "zone.js": "~0.12.0"
   }
 }
-
